feat(api): add listings views, permissions, routes and update OpenAPI spec
